--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,6 @@
-numpy==1.24.4
-numpy==1.21.2
-numpy==1.25.2
-numpy==1.21.5
-numpy==1.23.5
 numpy==1.24.3
 Pillow==8.4.0
-Pillow==9.5.0
-Pillow==9.2.0
-Pillow==9.4.0
-Pillow==12.0.0
-streamlit==1.34.0
-streamlit==1.26.0
-streamlit==1.22.0
-tensorflow==2.16.1
+streamlit
 tensorflow==2.13.0
-tensorflow_intel==2.16.1
 tensorflow_intel==2.13.0
 
